deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: graylog
  namespace: graylog
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
spec:
  ports:
    - name: graylog
      port: 9000
  type: ClusterIP
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    name: graylog
---
apiVersion: v1
kind: Service
metadata:
  name: graylog-web
  namespace: graylog
spec:
  ports:
    - name: graylog
      port: 80
      protocol: TCP
      targetPort: 9000
    - name: gelf
      port: 12201
      protocol: 
      targetPort: 12201
    - name: syslog
      port: 514
      protocol: 
      targetPort: 514
  selector:
    name: graylog
  type: "LoadBalancer"
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: graylog
  namespace: graylog
spec:
  serviceName: graylog
  replicas: 1
  selector:
    matchLabels:
      name: graylog
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: graylog
      annotations:
    spec:
      serviceAccountName: graylog
      nodeSelector:
        kubernetes.io/arch: arm64
      containers:
        - name: graylog-server
          image: "graylog/graylog:4.1.3-arm64"
          imagePullPolicy: "IfNotPresent"
          command:
            - /entrypoint.sh
          securityContext:
            privileged: false
          ports:
            - containerPort: 9000
              name: graylog
            - containerPort: 12201
              name: gelf
              protocol: 
            - containerPort: 514
              name: syslog
              protocol: 
          resources:
            limits:
              cpu: "1"
              memory: 1024Mi
            requests:
              cpu: 500m
              memory: 1024Mi
          startupProbe:
            httpGet:
              path: /api/system/lbstatus
              port: 9000
            periodSeconds: 60
            failureThreshold: 3
            successThreshold: 1
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /api/system/lbstatus
              port: 9000
            initialDelaySeconds: 60
            periodSeconds: 30
            failureThreshold: 3
            successThreshold: 1
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /api/system/lbstatus
              port: 9000
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3
            successThreshold: 1
            timeoutSeconds: 5
          volumeMounts:
            - name: journal
              mountPath: /usr/share/graylog/data/journal
            - name: config
              mountPath: /usr/share/graylog/config
            - name: entrypoint
              mountPath: /entrypoint.sh
              subPath: entrypoint.sh
            - name: kubectl
              mountPath: /k8s
      terminationGracePeriodSeconds: 120
      volumes:
        - name: config
          configMap:
            name: graylog
            items:
              - key: graylog.conf
                path: graylog.conf
                mode: 292 # 0444
              - key: log4j2.xml
                path: log4j2.xml
                mode: 292 # 0444
        - name: entrypoint
          configMap:
            name: graylog
            items:
              - key: entrypoint.sh
                path: entrypoint.sh
                mode: 365 # 0555
        - name: kubectl
          emptyDir: {}
  volumeClaimTemplates:
    - metadata:
        name: journal
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "1Gi"
