elastic.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: es
  namespace: graylog
spec:
  ports:
  - port: 9200
    name: api
  selector:
    app: es

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: es
  namespace: graylog
spec:
  selector:
    matchLabels:
      app: es
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: es
    spec:
      nodeSelector:
        kubernetes.io/arch: arm64
      containers:
        - image: elasticsearch:7.9.0
          imagePullPolicy: IfNotPresent
          name: es
          resources:
            limits:
              memory: "1.5Gi"
              cpu: "2"
          ports:
            - containerPort: 9200
              name: api
          volumeMounts:
            - name: es-data
              mountPath: /usr/share/elasticsearch/data
      volumes:
        - name: es-data
          persistentVolumeClaim:
            claimName: es-data-pvc
