mongodb.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: graylog
spec:
  ports:
  - port: 27017
  selector:
    app: mongo

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: graylog
spec:
  selector:
    matchLabels:
      app: mongo
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - image: medinvention/mongodb:3.2.10
          imagePullPolicy: IfNotPresent
          command: ["/bin/sh"]
          args: ["-c", "rm -f /var/lib/mongodb/mongod.lock && /usr/bin/mongod -f /etc/mongodb.conf --journal"]
          name: mongo
          ports:
            - containerPort: 27017
              name: tcp
          volumeMounts:
            - name: mongo-data
              mountPath: /var/lib/mongodb
      nodeSelector:
        kubernetes.io/arch: arm
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: mongo-data-pvc
